--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,6 @@ DB_DATABASE=uep_db
 DB_USERNAME=postgres
 DB_PASSWORD=
 
-
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
@@ -30,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=melanierubi.mu@gmail.com
+MAIL_PASSWORD=qfuvbkwyfoobsvaj
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=melanierubi.mu@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
