--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "maatwebsite/excel": "^3.1",
         "owen-it/laravel-auditing": "^13.6",
         "pragmarx/google2fa-laravel": "^2.2",
-        "spatie/laravel-permission": "^6.9"
+        "spatie/laravel-permission": "^6.9",
+        "spatie/laravel-tags": "^4.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
